[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
chrono = "0.4.43"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = "2.13.1"
nom = "8.0.0"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
